Funkar med verifieringsemail.